src/test/ui/associated-types/associated-types-unsized.stderr
error[E0277]: the size for values of type `<T as Get>::Value` cannot be known at compilation time
  --> $DIR/associated-types-unsized.rs:7:9
   |
LL |     let x = t.get();
   |         ^ doesn't have a size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `<T as Get>::Value`
   = note: to learn more, visit <https://doc.rust-lang.org/book/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
   = help: consider adding a `where <T as Get>::Value: std::marker::Sized` bound
   = note: all local variables must have a statically known size
   = help: unsized locals are gated as an unstable feature

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
